# iotivity-xmpp

./: .gitignore  CMakeLists.txt  Doxyfile  SConstruct  SConstruct_Externals
WinDT/: WinDT.sln
WinDT/CCFXmppDll/: CCFXmppDll.cpp  CCFXmppDll.vcxproj  CCFXmppDll.vcxproj.filters  dllmain.cpp  stdafx.cpp
WinDT/CCFXmpp_Tests/: CCFXmpp_Tests.vcxproj  CCFXmpp_Tests.vcxproj.filters  stdafx.cpp
WinDT/WinDT/: WinDT.vcxproj  WinDT.vcxproj.filters  packages.config  stdafx.cpp  stdafx.h
WinDT/ra_xmpp/: ra_xmpp.vcxproj  ra_xmpp.vcxproj.filters
WinDT/ra_xmpp_tests/: ra_xmpp_tests.cpp  ra_xmpp_tests.vcxproj  ra_xmpp_tests.vcxproj.filters
build_common/: SConscript.py  run_ccfxmpp_tests.sh  run_ra_xmpp_tests.sh  script_helpers.py
build_common/tools/: Configure.py  Make.py  URLDownload.py  UnpackAll.py
doc/: .README
patches/: rapidxml-no-ending.patch  rapidxml-non-template-flags.patch  rapidxml-partial-parse.patch
ra_xmpp/: Doxyfile  SConscript.py  ra_xmpp.c  ra_xmpp.h  ra_xmpp_over_ccfxmpp.cpp
ra_xmpp/c_init_test/: SConscript.py  main.c
ra_xmpp/test/: SConscript.py  main.cpp  xmpp_tests.cpp
src/: SConscript.py
src/bosh/: boshclient.cpp  boshclient.h  httpclient.cpp  httpclient.h
src/common/: actions.h  async_notify.h  banned.h  bufferencrypt.cpp  bufferencrypt.h  buffers.cpp  buffers.h  compatibility.cpp  compatibility.h  errorabstraction.cpp  errorabstraction.h  logstream.cpp  logstream.h  rand_helper.cpp  rand_helper.h  stcqueue.h  str_helpers.cpp  str_helpers.h  sync_notify.h
src/connect/: connecterror.cpp  connecterror.h  curlconnect.cpp  curlconnect.h  proxy.cpp  proxy.h  streaminterfaces.h  tcpclient.cpp  tcpclient.h
src/include/: ccfxmpp.h  xmpp_feature_flags.h
src/platform/linux/: stdafx.h
src/xml/: portabledom.cpp  portabledom.h
src/xmpp/: ccfxmpp.cpp  jabberid.cpp  jabberid.h  sasl.cpp  sasl.h  xmppbosh.cpp  xmppbosh.h  xmppclient.cpp  xmppclient.h  xmppconfig.cpp  xmppconfig.h  xmppevents.h  xmppextension.cpp  xmppextension.h  xmppinterfaces.h  xmppping.cpp  xmppping.h  xmpppubsub.cpp  xmpppubsub.h  xmppregister.cpp  xmppregister.h  xmppservicedisc.cpp  xmppservicedisc.h  xmppstream.cpp  xmppstream.h  xmppstrophe.cpp  xmppstrophe.h
test/: SConscript.py  bosh_tests.cpp  common_tests.cpp  curl_tests.cpp  ping_tests.cpp  portabledom_tests.cpp  pubsub_tests.cpp  register_tests.cpp  servicedisc_tests.cpp  tcp_tests.cpp  unittest_base.cpp  xmpp_compliance_tests.cpp  xmpp_connect_config.cpp  xmpp_connect_config.h  xmpp_connect_establish.cpp  xmpp_connect_establish.h  xmpp_dummy_server.cpp  xmpp_dummy_server.h  xmpp_test_config.h  xmpp_tests.cpp
test/xmpp_config/: xmpp_config.xml
